# rofaz-portfolio

./: index.html  script.js  services.css  style.css
backend/: Cargo.toml
backend/src/: error.rs  main.rs  routes.rs
backend/src/handlers/: ai.rs  mod.rs  project.rs
backend/src/models/: project.rs
frontend/: bradeac_styles.css  bradeac_temp.html  css_vars.txt  get_styles.js  package-lock.json  package.json
frontend/app/: ClientLayout.tsx  globals.css  layout.tsx  page.tsx
frontend/app/(admin)/: layout.tsx
frontend/app/(admin)/dashboard/: page.tsx
frontend/app/(admin)/login/: page.tsx
frontend/app/cv/: page.tsx
frontend/app/projects/: page.tsx
frontend/components/: Chatbot.tsx  LiveShell.tsx  Scene3D.tsx
frontend/components/admin/: ImageDropzone.tsx  MarkdownEditor.tsx
frontend/lib/: api.ts
legacy/: index.html  script.js  style.css
legacy/project/: project1.html  style.css
legacy/project/solve_problems/: Ali Baba and Puzzles.C  problems.html  script.js
legacy/project/todo/: script.js
project/: project1.html  script.js
project/solve_problems/: styles.css
project/src/: App.css  App.js  DatePicker.js  TaskForm.js  TaskList.js  package.json
project/todo/: index.html  script.js  styles.css
src/: App.js  app.css
