[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.102"
async-openai = "0.34.0"
